--- a/dev/ember-project/app/templates/application.hbs
+++ b/dev/ember-project/app/templates/application.hbs
@@ -18,7 +18,7 @@
   </div>
   <div class="container-fluid row">
     <div class="container-fluid col-3 middle">
-        <TournamentList/>
+        <TournamentList />
     </div>
     <div class="container-fluid col-6 middle">
 		{{outlet}}
@@ -30,7 +30,7 @@
   </div>
   <div class="container-fluid row">
     <div class="container-fluid col-3 footer">
-            <LinkTo @route="pong-game" class="nav-button">Game</LinkTo>
+            <LinkTo @route="choose-game" class="nav-button">Game</LinkTo>
             <LinkTo @route="chat" class="nav-button">Chat</LinkTo>
             <LinkTo @route="tournament" class="nav-button">Create Tournament</LinkTo>
     </div>
