--- a/dev/ember-project/app/templates/pong-game.hbs
+++ b/dev/ember-project/app/templates/pong-game.hbs
@@ -1,5 +1,1 @@
-<div class="pong-game">
-  <Paddle @position={{this.leftPaddlePosition}} @side="paddle-left" />
-  <Ball @positionX={{this.ballPositionX}} @positionY={{this.ballPositionY}} />
-  <Paddle @position={{this.rightPaddlePosition}} @side="paddle-right" />
-</div>
+<PongGame />
