--- a/dev/ember-project/app/components/profile-own.hbs
+++ b/dev/ember-project/app/components/profile-own.hbs
@@ -1,32 +1,29 @@
 <div class="container-fluid row fill">
   {{!-- Profile picture column (1 part) --}}
-  <div class="col">
-    <img src="/images/default-profile.jpeg" alt="Profile Picture" class="profile-pic" />
+  <div class="col center">
+    <img src={{this.ownUser.avatar}} alt="Profile Picture" class="profile-pic" />
   </div>
 
   {{!-- Profile details column (3 parts) --}}
   <div class="col-10">
     {{!-- First row of profile details --}}
     <div class="profile-details">
-      <h2 class="name">OwnUser</h2>
-      {{#if this.session.isAuthenticated}}
+      {{#if this.isAuthenticated}}
+        <h2 class="name">{{this.ownUser.nickname}}</h2>
         <button class="logout-button" type="button" {{on "click" this.logout}}>Logout</button>
       {{/if}}
-      <h2 class="points">1000🏆</h2>
-  
+      <h2 class="points">{{this.ownUser.points}}🏆</h2>
     </div>
 
     {{!-- Second row of profile details --}}
     <div class="profile-details">
-      <h2 >Some</h2>
-      <h2 >Other</h2>
-      <h2 >Stuff</h2>
+      <h2 >Games: {{this.ownUser.games_total}}</h2>
+      <h2 >Wins: {{this.ownUser.wins}}</h2>
     </div>
 
     <div class="profile-details">
-      <h2 >Some</h2>
-      <h2 >Other</h2>
-      <h2 >Stuff</h2>
+      <h2 >{{this.ownUser.status}}</h2>
+      <h2 >Losses: {{this.ownUser.losses}}</h2>
     </div>
     
   </div>
