--- a/dev/ember-project/app/styles/app.css
+++ b/dev/ember-project/app/styles/app.css
@@ -246,11 +246,26 @@ input[type="password"] {
 }
 
 .profile-pic {
-  width: 12vh; /* Width of the profile picture */
-  height: 12vh; /* Height of the profile picture */
+  width: 11vh; /* Width of the profile picture */
+  height: 11vh; /* Height of the profile picture */
   border-radius: 50%; /* Makes the image round */
-  align-items: center;
   padding: 0;
+}
+
+.no-padding {
+  padding: 0;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.btn-close {
+  position: absolute; /* Allows positioning relative to the .col container */
+  top: 0; /* Aligns to the top of the container */
+  left: 0; /* Aligns to the right of the container */
+  border: none;
+  cursor: pointer;
 }
 
 .navigation-bar {
