--- a/dev/ember-project/app/components/profile-own.hbs
+++ b/dev/ember-project/app/components/profile-own.hbs
@@ -1,4 +1,4 @@
-<div class="container-fluid row fill">
+<div class="container-fluid row fill p-2">
   {{!-- Profile picture column (1 part) --}}
   <div class="col center">
     <img src={{this.ownUser.avatar}} alt="Profile Picture" class="profile-pic" />
@@ -9,21 +9,30 @@
     {{!-- First row of profile details --}}
     <div class="profile-details">
       {{#if this.isAuthenticated}}
-        <h2 class="name">{{this.ownUser.nickname}}</h2>
+        {{#if this.ownUser}}
+          <h2 class="name">{{this.ownUser.nickname}}</h2>
+          <ModalProfile @user={{this.ownUser}} @updateParent={{this.fetchUserData}}/>
+        {{else}}
+          <p>Loading user...</p> <!-- Or another fallback message -->
+        {{/if}}
         <button class="logout-button" type="button" {{on "click" this.logout}}>Logout</button>
       {{/if}}
-      <h2 class="points">{{this.ownUser.points}}🏆</h2>
+      <h2 class="points info">{{this.ownUser.points}} 🏆</h2>
     </div>
 
     {{!-- Second row of profile details --}}
     <div class="profile-details">
-      <h2 >Games: {{this.ownUser.games_total}}</h2>
-      <h2 >Wins: {{this.ownUser.wins}}</h2>
+      <h2 class="info">Games: {{this.ownUser.games_total}}</h2>
+      <h2 class="info">Wins: {{this.ownUser.wins}}</h2>
     </div>
 
     <div class="profile-details">
-      <h2 >{{this.ownUser.status}}</h2>
-      <h2 >Losses: {{this.ownUser.losses}}</h2>
+      {{#if this.isOnline}} 
+        <h2 class="info">🟢 online</h2>
+      {{else}}
+        <h2 class="info">🔴 offline</h2>
+      {{/if}}
+      <h2 class="info">Losses: {{this.ownUser.losses}}</h2>
     </div>
     
   </div>
