--- a/dev/ember-project/app/components/tournament-item.hbs
+++ b/dev/ember-project/app/components/tournament-item.hbs
@@ -1,9 +1,9 @@
 <div class="user-card">
-        <p><h2>{{@creator}}'s</h2>
-        <h3>Tournament</h3></p>
+        <p class="mb-0"><h2 class="info">{{@creator}}'s</h2>
+        <h3 class="tournament-info">Tournament</h3></p>
         <div class="actions left">
             <button class="tournament-button join" onclick={{this.onJoinClick}} type="button">Join</button>
             <button class="tournament-button" onclick={{this.onLeaveClick}} type="button">Leave</button>
         </div>
-        <h2 class="points">👥 {{@current_players}}/{{@max_players}}</h2>
+        <h2 class="points info">👥 {{@current_players}}/{{@max_players}}</h2>
 </div>
