--- a/dev/ember-project/app/templates/choose-game.hbs
+++ b/dev/ember-project/app/templates/choose-game.hbs
@@ -12,7 +12,7 @@
     </div>
 
     <div class="game-buttons">
-      <button type="button" {{on "click" (fn this.chooseGame "ai")}}>Single Player</button>
+      <button type="button" {{on "click" (fn this.chooseGame "computer")}}>Single Player</button>
       <button type="button" {{on "click" (fn this.chooseGame "local")}}>Local Multiplayer</button>
       <button type="button" {{on "click" (fn this.chooseGame "remote")}}>Remote Multiplayer</button>
     </div>
